Fix overflow on reference pages

--- a/static/css/app_custom.css
+++ b/static/css/app_custom.css
@@ -7,7 +7,6 @@
 }
 
 td, th {
-    padding-left: 2rem;
     padding-right: 2rem;
 }
 
